add language selection screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,16 +10,16 @@ activityCompose = "1.10.1"
 composeBom = "2025.06.01"
 # Custom deps
 uiTextGoogleFonts = "1.8.3"
-ktor = "3.2.0"
+ktor = "3.1.3"
 kotlinx-serialization = "1.9.0"
 koinBom = "4.1.0"
 coil = "3.2.0"
 materialIconsExtended = "1.7.3"
-materialKolor = "2.1.1"
+materialKolor = "3.0.0-beta07"
 composeIcons = "1.1.1"
 composeNavigation = "2.9.0-beta03"
 connectivity = "2.1.0"
-supabaseBom = "3.2.0"
+supabaseBom = "3.1.3"
 kermit = "2.0.6"
 sandwich = "2.1.2"
 
