--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.11.0"
+coreSplashscreen = "1.0.1"
 kotlin = "2.2.0"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -10,7 +11,7 @@ activityCompose = "1.10.1"
 composeBom = "2025.06.01"
 # Custom deps
 uiTextGoogleFonts = "1.8.3"
-ktor = "3.1.3"
+ktor = "3.2.1"
 kotlinx-serialization = "1.9.0"
 koinBom = "4.1.0"
 coil = "3.2.0"
@@ -19,7 +20,7 @@ materialKolor = "3.0.0-beta07"
 composeIcons = "1.1.1"
 composeNavigation = "2.9.0-beta03"
 connectivity = "2.1.0"
-supabaseBom = "3.1.3"
+supabaseBom = "3.2.0"
 kermit = "2.0.6"
 sandwich = "2.1.2"
 
@@ -28,6 +29,7 @@ sandwich = "2.1.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
