--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 agp = "8.11.1"
-coreSplashscreen = "1.0.1"
 kotlin = "2.2.0"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -10,13 +9,15 @@ lifecycleRuntimeKtx = "2.9.1"
 activityCompose = "1.10.1"
 composeBom = "2025.06.01"
 # Custom deps
+coreSplashscreen = "1.0.1"
+composeShimmer = "1.3.3"
 uiTextGoogleFonts = "1.8.3"
 ktor = "3.2.1"
 kotlinx-serialization = "1.9.0"
 koinBom = "4.1.0"
 coil = "3.2.0"
 materialIconsExtended = "1.7.3"
-materialKolor = "3.0.0-beta07"
+materialKolor = "3.0.0"
 composeIcons = "1.1.1"
 composeNavigation = "2.9.0-beta03"
 connectivity = "2.1.0"
@@ -30,6 +31,7 @@ sandwich = "2.1.2"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+compose-shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "composeShimmer" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
