--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 agp = "8.12.2"
-kotlin = "2.2.0"
-coreKtx = "1.16.0"
+kotlin = "2.2.10"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.9.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycleRuntimeKtx = "2.9.3"
 activityCompose = "1.10.1"
-composeBom = "2025.06.01"
+composeBom = "2025.08.01"
 # Custom deps
 coreSplashscreen = "1.0.1"
 composeShimmer = "1.3.3"
-uiTextGoogleFonts = "1.8.3"
-ktor = "3.2.1"
+uiTextGoogleFonts = "1.9.0"
+ktor = "3.2.3"
 kotlinx-serialization = "1.9.0"
 koinBom = "4.1.0"
-coil = "3.2.0"
+coil = "3.3.0"
 materialIconsExtended = "1.7.3"
-materialKolor = "3.0.0"
+materialKolor = "3.0.1"
 composeIcons = "1.1.1"
-composeNavigation = "2.9.0-beta03"
-connectivity = "2.1.0"
-supabaseBom = "3.2.0"
-kermit = "2.0.6"
+composeNavigation = "2.9.0-rc01"
+connectivity = "2.2.0"
+supabaseBom = "3.2.2"
+kermit = "2.0.8"
 sandwich = "2.1.2"
 
 
