--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2025.08.01"
 # Custom deps
 coreSplashscreen = "1.0.1"
 composeShimmer = "1.3.3"
+lottie = "6.6.7"
 uiTextGoogleFonts = "1.9.0"
 ktor = "3.2.3"
 kotlinx-serialization = "1.9.0"
@@ -46,6 +47,7 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 # Custom Deps
 androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 material-kolor = { module = "com.materialkolor:material-kolor", version.ref = "materialKolor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
