feat: Add network connectivity monitoring and dialog for offline status
This commit introduces a `NetworkStatusDialog` to inform users about network connectivity issues.

Key changes:
- Added `NetworkStatusDialog.kt` which displays a non-dismissable dialog when the device is offline. The dialog shows an icon, a title, a message, and a loading indicator while checking the connection.
- Integrated the `NetworkStatusDialog` into `MainActivity.kt`.
- Updated the `connectivity` library version from `2.2.0` to `2.2.1` in `gradle/libs.versions.toml`.
- Added `connectivity-android` dependency.
- Added `ACCESS_NETWORK_STATE` permission to `AndroidManifest.xml`.
- Initialized and managed `Connectivity` instance in `MainActivity.kt` to start monitoring on create and stop on destroy.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ materialIconsExtended = "1.7.3"
 materialKolor = "3.0.1"
 composeIcons = "1.1.1"
 composeNavigation = "2.9.0-rc01"
-connectivity = "2.2.0"
+connectivity = "2.2.1"
 supabaseBom = "3.2.2"
 kermit = "2.0.8"
 
@@ -69,6 +69,7 @@ composeIcons-fontAwesome = { module = "br.com.devsrsouza.compose.icons:font-awes
 androidx-compose-navigation = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
 connectivity-core = { module = "dev.jordond.connectivity:connectivity-core", version.ref = "connectivity" }
 connectivity-compose-device = { module = "dev.jordond.connectivity:connectivity-compose-device", version.ref = "connectivity" }
+connectivity-android = { module = "dev.jordond.connectivity:connectivity-android", version.ref = "connectivity" }
 supabase-bom = { module = "io.github.jan-tennert.supabase:bom", version.ref = "supabaseBom" }
 supabase-postgrest-kt = { module = "io.github.jan-tennert.supabase:postgrest-kt" }
 supabase-realtime-kt = { module = "io.github.jan-tennert.supabase:realtime-kt" }
